--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://sw.dlei.ca:5432/postgres
+# spring.datasource.url=jdbc:postgresql://postgresql.dlei.ca:5432/postgres
+spring.datasource.url=jdbc:postgresql://a-postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+# Dump the queries to standard out
+spring.jpa.show-sql=true
+# Beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.initialization-mode=always
+# load schema.sql ???
+# =ALWAYS
+#	Always initialize the datasource.
+# =EMBEDDED
+#	Only initialize an embedded datasource.
+# =NEVER
+#	Do not initialize the datasource.
+#spring.datasource.initialization-mode=NEVER
