--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-# spring.datasource.url=jdbc:postgresql://postgresql.dlei.ca:5432/postgres
-spring.datasource.url=jdbc:postgresql://a-postgres:5432/postgres
+# spring.datasource.url=jdbc:postgresql://postgres.dlei.ca:5432/postgres
+spring.datasource.url=jdbc:postgresql://c-postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Dump the queries to standard out
 spring.jpa.show-sql=true
@@ -24,3 +24,5 @@ spring.jpa.hibernate.ddl-auto=update
 # =NEVER
 #	Do not initialize the datasource.
 #spring.datasource.initialization-mode=NEVER
+
+logging.file.name=log/postgres.log
